==========================================
Changes from BWAPI Beta 3.5 to BWAPI 3.5.1
==========================================

Bug Fixes:
    * Fixed an issue where screenshots were disabled while in Windowed mode.
    * Fixed a bug/regression that caused replays to crash.

========================================
Changes from BWAPI Beta 3.4 to BWAPI 3.5
========================================

Changes:

    * The return values for Game::getGroundHeight have been altered. This allows the inclusion of doodads in terrain height computation (For example: Units behind a tree).
    * The DEBUG version now checks for memory leaks.
    * Game::isBuildable now includes a boolean to specify whether to check if a visible building is blocking the way. It is false by default.
    * Game::canBuildHere has slightly increased performance.
    * Game::drawLine has greatly increased performance.
    * The config values "ai_dll" and "ai_dll_dbg" have been replaced with "ai" and "ai_dbg", the revision and multi-instance entries ("ai_dll_rev", "ai_dll_#", etc.) have been removed. More information in the updated bwapi.ini config file.
    * Some distance functions now use integers instead of doubles.
    * The config option "save_replay" under "auto_menu" now accepts environment variables as well as our user defined variables. It also creates the directory if it does not exist, and creates the file directly instead of copying LastReplay.rep (LastReplay.rep will not be created).
    * Most BWAPILIB objects now have an "operator int() const" as a replacement for all other comparison operators. This allows more flexibility, specifically for the developers of BWAPI, so that a call to ".getID()" does not need to be made.
    * Resizing the window in Windowed Mode will now stretch the game screen.
    * Holding ALT in Windowed Mode will now prevent the cursor from leaving the window (same as W-Mode functionality).